--- a/index.html
+++ b/index.html
@@ -97,7 +97,11 @@ body{font-family:Roboto,Arial,sans-serif;font-weight: 300;color:#777;}
     text-shadow: 1px 1px #191919;
     margin: 0 0 30px;
 }
-  .tlepong b{}
+  .telpong a:link,.telpong a:visited{display: block;
+    line-height: 1em;
+    color: #ed1a23;
+    text-shadow: 1px 1px #fbfbfb;}
+  .tlepong b{font-size: 66px;}
   
   
 footer{background: #222;text-align: center;color: #777;padding: 20px;font-size: 12px;}footer a:link,footer a:visited{text-decoration:none;color:#777}footer a:hover{color:#999}
@@ -176,8 +180,8 @@ footer {padding: 10px;}
 <div class='tlepong'>
 <p>Hubungi Kami Sekarang Juga</p>
 <a href="tel:+6281312815XXX" title="Order via Telepon">
-<svg height="100" viewBox="0 0 512 512" width="100">
-<rect fill="#7b519d" height="512" rx="100" ry="100" width="512"></rect>
+<svg height="60" viewBox="0 0 512 512" width="60">
+<rect fill="#ed1a23" height="512" rx="60" ry="60" width="512"></rect>
 <g fill="#fff">
 <path d="M421.915 345.457c-12.198-9.82-25.233-18.634-38.064-27.638-25.59-17.973-48.996-19.37-68.091 9.546-10.723 16.234-25.734 16.945-41.43 9.823-43.27-19.62-76.683-49.85-96.255-93.83-8.658-19.458-8.544-36.903 11.713-50.665 10.725-7.278 21.53-15.89 20.666-31.793-1.128-20.736-51.475-90.033-71.357-97.347-8.227-3.027-16.42-2.83-24.79-.017-46.62 15.678-65.93 54.019-47.437 99.417 55.17 135.442 152.26 229.732 285.91 287.282 7.62 3.277 16.085 4.587 20.371 5.763 30.428.306 66.073-29.01 76.367-58.104 9.911-27.99-11.035-39.1-27.603-52.437zM272.06 77.439c97.707 15.025 142.768 61.485 155.21 159.895 1.154 9.09-2.232 22.768 10.737 23.02 13.554.259 10.288-13.217 10.402-22.316 1.146-92.684-79.669-178.606-173.524-181.774-7.081 1.019-21.733-4.883-22.647 10.988-.609 10.7 11.727 8.942 19.822 10.187z"></path>
 <path d="M291.172 104.422c-9.398-1.132-21.805-5.56-24.001 7.48-2.293 13.687 11.535 12.297 20.42 14.286 60.346 13.487 81.358 35.451 91.294 95.311 1.451 8.727-1.432 22.31 13.399 20.059 10.991-1.674 7.021-13.317 7.94-20.118.487-57.47-48.758-109.778-109.052-117.018z"></path>
